fix code covrage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,14 @@
 #
 
 cmake_minimum_required(VERSION 3.10)
-
 project(bbt)
+
+# enable c++ 11
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+option(BBT_BUILD_TESTS "Build unit tests" ON)
+option(BBT_BUILD_BENCHMARKS "Build benchmarks" ON)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
@@ -12,47 +18,44 @@ set(CMAKE_BUILD_TYPE "Debug")
 
 set(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/third_party)
 
-# enable c++ 11
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 
 # Common
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -Wall -Werror -g -O2")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -std=c++11 -Wall -Werror -g -O2")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -Wall -Werror")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -std=c++11 -Wall -Werror")
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
-# bbt_base
-aux_source_directory(src/base  DIR_SRCS)
+add_library(bbt_base SHARED
+    src/base/status.cc
+)
 
 # bbt_appkit
 
-#
-# Testing
-#
-include(GoogleTest)
-add_subdirectory(${THIRD_PARTY_DIR}/googletest-1.8.1)
-enable_testing()
+if(BBT_BUILD_TESTS)
+    enable_testing()
 
-add_executable(bbt_test ${DIR_SRCS} src/test/hello_test.cc)
-target_link_libraries(bbt_test gmock gmock_main)
+    # Use GoogleTest
+    include(GoogleTest)
+    add_subdirectory(${THIRD_PARTY_DIR}/googletest-1.8.1)
 
-gtest_discover_tests(bbt_test)
+    file(GLOB BBT_TESTS_SRCS
+        "src/test/hello_test.cc"
+        "src/base/*_test.cc"
+    )
+    add_executable(tests ${BBT_TESTS_SRCS})
+    target_link_libraries(tests bbt_base gmock gmock_main)
+    gtest_discover_tests(tests)
 
 
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    # Code Coverage
     include(CodeCoverage)
     append_coverage_compiler_flags()
 
     setup_target_for_coverage_lcov(
-        NAME bbt_coverage
+        NAME coverage
         EXECUTABLE make test -j ${n_cores}
-        DEPENDENCIES bbt_test
+        DEPENDENCIES tests
     )
 
-    set(COVERAGE_EXCLUDES 
-        "build/*"
-        "src/test/*"
-        "third_party/*"
-    )
 endif()
