--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ option(BBT_BUILD_BENCHMARKS "Build benchmarks" ON)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
+set(BBT_OS "linux")
+set(BBT_)
 set(CMAKE_BUILD_TYPE "Debug")
 
 set(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/third_party)
@@ -26,9 +28,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -std=c++11 -Wall -Werror")
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
-add_library(bbt_base SHARED
-    src/base/status.cc
-)
+file(GLOB_RECURSE BBT_BASE_SRCS "src/base/*.cc" EXCLUDE "src/base/*_test.cc")
+list(FILTER BBT_BASE_SRCS EXCLUDE REGEX ".*_test.cc$") # Except unit test sources
+add_library(bbt_base SHARED ${BBT_BASE_SRCS})
 
 # bbt_appkit
 
@@ -39,7 +41,7 @@ if(BBT_BUILD_TESTS)
     include(GoogleTest)
     add_subdirectory(${THIRD_PARTY_DIR}/googletest-1.8.1)
 
-    file(GLOB BBT_TESTS_SRCS
+    file(GLOB_RECURSE BBT_TESTS_SRCS
         "src/test/hello_test.cc"
         "src/base/*_test.cc"
     )
@@ -56,6 +58,7 @@ if(BBT_BUILD_TESTS)
         NAME coverage
         EXECUTABLE make test -j ${n_cores}
         DEPENDENCIES tests
+        EXCLUDE "thrid_party/*" "*_test.cc"
     )
 
 endif()
