--- a/src/modules/hello/CMakeLists.txt
+++ b/src/modules/hello/CMakeLists.txt
@@ -1,4 +1,4 @@
 
 
-add_library(mod_hello MODULE main.cc)
+add_library(mod_hello SHARED main.cc)
 target_link_libraries(mod_hello bbt_base bbt_appkit)
