--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(bbt_base SHARED 
     fs.cc
+    logging.cc
     status.cc
     str_util.cc
     string_view.cc
@@ -13,6 +14,7 @@ if(BBT_BUILD_TESTS)
 
     add_executable(test_base 
         fs_test.cc    
+        logging_test.cc
         status_test.cc
         str_util_test.cc
         string_view_test.cc
