--- a/appkit/CMakeLists.txt
+++ b/appkit/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(bbt_appkit SHARED 
-    module.cc
     env.cc
+    module/manager.cc
+    module/loader.cc
 )
 
 if(BBT_BUILD_TESTS)
@@ -8,9 +9,9 @@ if(BBT_BUILD_TESTS)
     include(GoogleTest)
 
 
-    add_executable(test_appkit 
-        module_test.cc    
+    add_executable(test_appkit   
         env_test.cc
+        module/module_test.cc
     )
     
     target_link_libraries(test_appkit bbt_appkit bbt_base gmock gmock_main)
