--- a/modules/debugger/CMakeLists.txt
+++ b/modules/debugger/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 
-add_library(mod_debugger SHARED debugger.cc)
+add_library(mod_debugger debugger.cc)
 target_link_libraries(mod_debugger bbt_base bbt_appkit)
 
 if(BBT_BUILD_TESTS)
