--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -46,8 +46,5 @@ jobs:
       uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        directory: ${{github.workspace}}/build
-        flags: unittests # optional
-        name: codecov-umbrella # optional
+        files: ${{github.workspace}}/build/lcov.info
         fail_ci_if_error: true # optional (default = false)
-        verbose: false # optional (default = false)
