--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -46,5 +46,5 @@ jobs:
       uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        files: ${{github.workspace}}/build/lcov.info
+        files: ${{github.workspace}}/build/bbt_lcov.info
         fail_ci_if_error: true # optional (default = false)
