--- a/bbt/modules/hello/CMakeLists.txt
+++ b/bbt/modules/hello/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library(mod_hello main.cc)
-target_link_libraries(mod_hello bbt_base bbt_appkit)
+target_link_libraries(mod_hello bbt_util bbt_appkit)
