--- a/bbt/util/CMakeLists.txt
+++ b/bbt/util/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(bbt_base 
+add_library(bbt_util 
     fs.cc
     logging.cc
     status.cc
@@ -7,12 +7,12 @@ add_library(bbt_base
     sys.cc
 )
 
-add_executable(bbt_base_test
+add_executable(bbt_util_test
     fs_test.cc
     logging_test.cc
     status_test.cc
     str_util_test.cc
     string_view_test.cc
     )
-target_link_libraries(bbt_base_test bbt_base gmock gmock_main)
-add_test(NAME bbt_base COMMAND bbt_base_test)
+target_link_libraries(bbt_util_test bbt_util gmock gmock_main)
+add_test(NAME bbt_util COMMAND bbt_util_test)
