--- a/bbt/io/CMakeLists.txt
+++ b/bbt/io/CMakeLists.txt
@@ -1,18 +1,18 @@
-add_library(bbt_net 
+add_library(bbt_io 
     buffer.cc
     ipaddr.cc
     http/request.cc
     http/response.cc
     http/server.cc
 )
-target_link_libraries(bbt_net bbt_base)
+target_link_libraries(bbt_io bbt_base)
 
-add_executable(bbt_net_test
+add_executable(bbt_io_test
     buffer_test.cc
     ipaddr_test.cc
     http/request_test.cc
     http/response_test.cc
     http/server_test.cc
     )
-target_link_libraries(bbt_net_test bbt_net gmock gmock_main)
-add_test(NAME bbt_net COMMAND bbt_net_test)
+target_link_libraries(bbt_io_test bbt_io gmock gmock_main)
+add_test(NAME bbt_io COMMAND bbt_io_test)
