--- a/bbt/base/CMakeLists.txt
+++ b/bbt/base/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(bbt_base STATIC
     str_util.cc
     string_view.cc
     sys.cc
+    timestamp.cc
 )
 
 add_executable(bbt_base_test
@@ -15,6 +16,7 @@ add_executable(bbt_base_test
     string_view_test.cc
     fmt_test.cc
     json_test.cc
+    timestamp_test.cc
     )
 target_link_libraries(bbt_base_test bbt_base gmock gmock_main)
 add_test(NAME bbt_base COMMAND bbt_base_test)
