--- a/bbt/CMakeLists.txt
+++ b/bbt/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(base)
-add_subdirectory(io)
 add_subdirectory(appkit)
+add_subdirectory(io)
+add_subdirectory(http)
 add_subdirectory(modules)
