add request handler test

--- a/bbt/http/CMakeLists.txt
+++ b/bbt/http/CMakeLists.txt
@@ -17,6 +17,7 @@ target_link_libraries(bbt_http bbt_base)
 add_executable(bbt_http_test
     server_test.cc
     url_test.cc
+    request_handler_test.cc
     )
 target_link_libraries(bbt_http_test bbt_http gmock gmock_main)
 add_test(NAME bbt_http COMMAND bbt_http_test)
