--- a/bbt/http/CMakeLists.txt
+++ b/bbt/http/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(bbt_http
     response.cc
     request.cc
     url.cc
+    form_data.cc
 )
 target_link_libraries(bbt_http bbt_base)
 
@@ -18,6 +19,7 @@ add_executable(bbt_http_test
     server_test.cc
     url_test.cc
     request_handler_test.cc
+    form_data_test.cc
     )
 target_link_libraries(bbt_http_test bbt_http gmock gmock_main)
 add_test(NAME bbt_http COMMAND bbt_http_test)
