--- a/bbt/CMakeLists.txt
+++ b/bbt/CMakeLists.txt
@@ -2,4 +2,5 @@ add_subdirectory(base)
 add_subdirectory(appkit)
 add_subdirectory(io)
 add_subdirectory(http)
+add_subdirectory(html)
 add_subdirectory(modules)
