--- a/bbt/http/CMakeLists.txt
+++ b/bbt/http/CMakeLists.txt
@@ -1,11 +1,11 @@
 #bbt_http
 add_library(bbt_http
+    server/serve_mux.cc
+    server/connection.cc
+    server/connection_manager.cc
+    server/request_parser.cc
     client.cc
     server.cc
-    connection.cc
-    connection_manager.cc
-    request_parser.cc
-    request_handler.cc
     response.cc
     request.cc
     url.cc
@@ -16,9 +16,9 @@ target_link_libraries(bbt_http bbt_base bbt_html)
 
 # bbt_http_test
 add_executable(bbt_http_test
+    server/serve_mux_test.cc
     server_test.cc
     url_test.cc
-    request_handler_test.cc
     form_data_test.cc
     )
 target_link_libraries(bbt_http_test bbt_http gmock gmock_main)
