--- a/bbt/CMakeLists.txt
+++ b/bbt/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(base)
 add_subdirectory(appkit)
 add_subdirectory(io)
+add_subdirectory(bus)
 add_subdirectory(http)
 add_subdirectory(html)
 add_subdirectory(modules)
