bug: add msg queue

--- a/bbt/bus/CMakeLists.txt
+++ b/bbt/bus/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(bbt_bus
     server.cc
     msg.cc
     msg_packer.cc
+    msg_queue.cc
 )
 target_link_libraries(bbt_bus bbt_base)
 
@@ -10,6 +11,7 @@ add_executable(bbt_bus_test
     bus_test.cc
     msg_test.cc
     msg_packer_test.cc
+    msg_queue_test.cc
 )
 target_link_libraries(bbt_bus_test bbt_bus gmock gmock_main)
 add_test(NAME bbt_bus COMMAND bbt_bus_test)
