--- a/bbt/bus/CMakeLists.txt
+++ b/bbt/bus/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(bbt_bus
     server.cc
     msg.cc
     msg_packer.cc
-    msg_queue.cc
+    method_mux.cc
     connection.cc
     connection_manager.cc
 )
@@ -13,7 +13,7 @@ add_executable(bbt_bus_test
     bus_test.cc
     msg_test.cc
     msg_packer_test.cc
-    msg_queue_test.cc
+    method_mux_test.cc
 )
 target_link_libraries(bbt_bus_test bbt_bus gmock gmock_main)
 add_test(NAME bbt_bus COMMAND bbt_bus_test)
