--- a/bbt/bus/CMakeLists.txt
+++ b/bbt/bus/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(bbt_bus
     msg_packer.cc
     method_mux.cc
     context.cc
+    connection.cc
 )
 target_link_libraries(bbt_bus bbt_net bbt_base)
 
@@ -13,6 +14,7 @@ add_executable(bbt_bus_test
     msg_test.cc
     msg_packer_test.cc
     method_mux_test.cc
+    connection_test.cc
 )
 target_link_libraries(bbt_bus_test bbt_bus gmock gmock_main)
 add_test(NAME bbt_bus COMMAND bbt_bus_test)
