--- a/bbt/bus/CMakeLists.txt
+++ b/bbt/bus/CMakeLists.txt
@@ -3,8 +3,8 @@ add_library(bbt_bus
     server.cc
     msg.cc
     msg_packer.cc
-    msg_proxy.cc
     context.cc
+    session.cc
 )
 target_link_libraries(bbt_bus bbt_net bbt_base)
 
@@ -14,7 +14,7 @@ add_executable(bbt_bus_test
     bus_test.cc
     msg_test.cc
     msg_packer_test.cc
-    msg_proxy_test.cc
+    session_test.cc
 )
 target_link_libraries(bbt_bus_test bbt_bus gmock gmock_main)
 add_test(NAME bbt_bus COMMAND bbt_bus_test)
