--- a/bbt/bus/CMakeLists.txt
+++ b/bbt/bus/CMakeLists.txt
@@ -4,7 +4,9 @@ add_library(bbt_bus
     msg.cc
     msg_packer.cc
     context.cc
-    session.cc
+    invoker.cc
+    service.cc
+    router.cc
 )
 target_link_libraries(bbt_bus bbt_net bbt_base)
 
@@ -14,7 +16,9 @@ add_executable(bbt_bus_test
     bus_test.cc
     msg_test.cc
     msg_packer_test.cc
-    session_test.cc
+    invoker_test.cc
+    service_test.cc
+    router_test.cc
 )
 target_link_libraries(bbt_bus_test bbt_bus gmock gmock_main)
 add_test(NAME bbt_bus COMMAND bbt_bus_test)
