--- a/bbt/CMakeLists.txt
+++ b/bbt/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_subdirectory(net2)
 add_subdirectory(base)
+add_subdirectory(io)
 add_subdirectory(appkit)
 add_subdirectory(net)
 add_subdirectory(bus)
