fix lcov command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,8 +57,8 @@ add_custom_target(lcov
     -o ${CMAKE_BINARY_DIR}/lcov.info
     '*/third_party/*' 
     '/usr/include/*'
-    '*/include/bbt/base/internal/fmt/*'
-    '*/include/bbt/base/internal/json/*'
+    '*/bbt/base/internal/fmt/*'
+    '*/bbt/base/internal/json/*'
 )
 
 add_custom_target(lcov_html
