--- a/cppboot/modules/debugger/CMakeLists.txt
+++ b/cppboot/modules/debugger/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(mod_debugger debugger.cc)
-target_link_libraries(mod_debugger cppboot_base cppboot_appkit)
+target_link_libraries(mod_debugger cppboot_base cppboot_adv)
 
 add_executable(cppboot_mod_debugger_test
     debugger_test.cc
