--- a/cppboot/modules/hello/CMakeLists.txt
+++ b/cppboot/modules/hello/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library(mod_hello main.cc)
-target_link_libraries(mod_hello cppboot_base cppboot_appkit)
+target_link_libraries(mod_hello cppboot_base cppboot_adv)
