--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,6 @@ target_link_libraries(cppboot_tests
     gmock 
     gmock_main
     cppboot_base 
-    cppboot_appkit
+    cppboot_adv
     )
 add_test(NAME cppboot_integration_test COMMAND cppboot_tests)
