--- a/cppboot/CMakeLists.txt
+++ b/cppboot/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_subdirectory(base)
 #add_subdirectory(io)
-add_subdirectory(appkit)
+add_subdirectory(adv)
 add_subdirectory(net)
 add_subdirectory(bus)
 add_subdirectory(http)
